--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -3,4 +3,10 @@
 # only main files contain this front matter, not partials.
 ---
 
+$sidebar-bg-color: #8f5536 !default;
+$sidebar-fg-color: white !default;
+$sidebar-sticky: true !default;
+$layout-reverse: false !default;
+$link-color: #268bd2 !default;
+
 @import "hydeout";
