--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,7 +1,7 @@
 <div id="sidebar">
   <header>
 
-	  <img src="{{ site.baseurl.}}assets/img/profile.jpg" style="border-radius:50%;" />
+	  <img src="{{ site.baseurl }}assets/img/profile.jpg" style="border-radius:50%;" />
     <{% if page.layout == "index" %}h1{% else %}div{% endif %} class="site-title">
       <a href="{{ "/" | relative_url }}">
         {% unless page.url == "/" %}
