--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -6,7 +6,7 @@
 $sidebar-bg-color: #8f5536 !default;
 $sidebar-fg-color: white !default;
 $sidebar-sticky: true !default;
-$layout-reverse: false !default;
+$layout-reverse: true !default;
 $link-color: #268bd2 !default;
 
 @import "hydeout";
